[gd_scene load_steps=4 format=3 uid="uid://da3vdhisw8edv"]

[ext_resource type="Script" uid="uid://c10avmbki61qv" path="res://scenes/objects/pickup-component.gd" id="1_te0bk"]
[ext_resource type="Script" uid="uid://dou5h5mjmu8sy" path="res://components/spawner_component.gd" id="2_hodyn"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_otu8t"]
blend_mode = 1
light_mode = 1

[node name="RigidBody2D" type="RigidBody2D" groups=["button_actionable"]]
collision_layer = 3
collision_mask = 3
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("1_te0bk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="PointLight2D" type="Sprite2D" parent="Sprite2D"]
visible = false
modulate = Color(1, 0.582387, 0.403011, 1)
material = SubResource("CanvasItemMaterial_otu8t")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("2_hodyn")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 3
panning_strength = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_detector_area_exited"]
